--- a/.gitattributes
+++ b/.gitattributes
@@ -8,3 +8,4 @@
 *.jpg filter=lfs diff=lfs merge=lfs -text 
 *.uasset filter=lfs diff=lfs merge=lfs -text
 *.umap filter=lfs diff=lfs merge=lfs -text
+*.gif filter=lfs diff=lfs merge=lfs -text
